--- a/splitplot_GomezGomez1984.Rmd
+++ b/splitplot_GomezGomez1984.Rmd
@@ -7,15 +7,14 @@ output:
       after_body: footer.html		
 ---
 
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
+```{r, echo=FALSE, warning=FALSE, message=FALSE, purl=FALSE}
 # formatting tables for html output
-knitr::opts_chunk$set(message = FALSE, warning = FALSE)
+knitr::opts_chunk$set(message = FALSE, warning = FALSE, purl = TRUE)
 options(knitr.kable.NA = '')
 pacman::p_load(kableExtra, formattable ,htmltools)
-pacman::p_load(purrr)
 ```
 
-```{r, message=FALSE, warning=FALSE}
+```{r}
 # packages
 pacman::p_load(readr, tidyverse, forcats, # data import and handling
                lme4, lmerTest,            # linear mixed model 
@@ -29,7 +28,7 @@ This example is taken from Chapter *"5 Split-plots"* of the course material ["Mi
 
 ## Import
 
-```{r, message=FALSE, warning=FALSE}
+```{r}
 # data (import via URL)
 dataURL <- "https://raw.githubusercontent.com/SchmidtPaul/DSFAIR/master/data/Gomez%26Gomez1984.csv"
 dat <- read_csv(dataURL)
@@ -65,7 +64,7 @@ Split-plot designs are designs for factorial experiments, which involve two inde
 We could now have a look at the arithmetic means and standard deviations for yield per genotype (`G`) and nitrogen level (`N`).
 
 <div class = "row"> <div class = "col-md-6">
-```{r, warning=FALSE, message=FALSE}
+```{r}
 dat %>% 
   group_by(G) %>% 
   summarize(mean    = mean(yield),
@@ -74,7 +73,7 @@ dat %>%
   print(n=Inf) # print full table
 ```
 </div> <div class = "col-md-6">
-```{r, warning=FALSE, message=FALSE}
+```{r}
 dat %>% 
   group_by(N) %>% 
   summarize(mean    = mean(yield),
@@ -86,7 +85,7 @@ dat %>%
 
 We can also create a plot to get a better feeling for the data.
 
-```{r, fig.align = "center", warning=FALSE, message=FALSE}
+```{r, fig.align = "center"}
 ggplot(data = dat, 
        aes(y = yield, 
            x = N,
@@ -200,16 +199,9 @@ ggplot() +
   theme(axis.text.x = element_text(angle=90, vjust=0.5)) # rotate x-axis label
 ```
 
+**R-Code and exercise solutions**
 
+Please [click here](https://github.com/SchmidtPaul/DSFAIR/tree/master/Rpurl){target="_blank"} to find a folder with `.R` files. Each file contains
 
-
-
-
-
-
-
-
-
-
-
-
+ * the entire R-code of each example combined, including
+ * solutions to the respective exercise(s).
