--- a/alpha_JohnWilliams1995.Rmd
+++ b/alpha_JohnWilliams1995.Rmd
@@ -139,6 +139,17 @@ mod.rb %>%
 
 As a result, we find that the model with random block effects has the smaller s.e.d. and is therefore more precise in terms of comparing genotypes.
 
+## Variance component estimates
+
+We can extract the variance component estimates for our mixed model as follows:
+
+```{r}
+mod.rb %>% 
+  VarCorr() %>% 
+  as.data.frame() %>% 
+  dplyr::select(grp, vcov)
+```
+
 ## ANOVA
 
 Thus, we can conduct an ANOVA for this model. As can be seen, the F-test of the ANOVA (using Kenward-Roger’s method for denominator degrees-of-freedom and F-statistic) finds the `gen` effects to be statistically significant (p`r anova(mod.rb, ddf="Kenward-Roger")["gen", "Pr(>F)"] %>% format.pval(pv = ., eps = .001, digits = 2)`). 
