--- a/alpha_JohnWilliams1995.Rmd
+++ b/alpha_JohnWilliams1995.Rmd
@@ -116,7 +116,7 @@ mod.fb %>%
           adjust = "tukey") %>%
   pluck("contrasts") %>% # extract diffs
   as_tibble %>% # format to table
-  pluck("SE") %>% # extract s.e.d. column
+  pull("SE") %>% # extract s.e.d. column
   mean() # get arithmetic mean
 ```
 </div> <div class = "col-md-6">
@@ -132,7 +132,7 @@ mod.rb %>%
           lmer.df = "kenward-roger") %>%
   pluck("contrasts") %>% # extract diffs
   as_tibble %>% # format to table
-  pluck("SE") %>% # extract s.e.d. column
+  pull("SE") %>% # extract s.e.d. column
   mean() # get arithmetic mean
 ```
 </div> </div>
