--- a/rowcol_KemptonFox1997.Rmd
+++ b/rowcol_KemptonFox1997.Rmd
@@ -111,7 +111,7 @@ mod.fb %>%
           adjust = "tukey") %>%
   pluck("contrasts") %>% # extract diffs
   as_tibble %>% # format to table
-  pluck("SE") %>% # extract s.e.d. column
+  pull("SE") %>% # extract s.e.d. column
   mean() # get arithmetic mean
 ```
 </div> <div class = "col-md-6">
@@ -128,7 +128,7 @@ mod.rb %>%
           lmer.df = "kenward-roger") %>%
   pluck("contrasts") %>% # extract diffs
   as_tibble %>% # format to table
-  pluck("SE") %>% # extract s.e.d. column
+  pull("SE") %>% # extract s.e.d. column
   mean() # get arithmetic mean
 ```
 </div> </div>
@@ -233,7 +233,7 @@ This example is taken from *"Example 8"* of the course material ["Mixed models f
   + Which genotypes have missing yield observations?
   + Create a field trial layout using ´desplot()´ where the plots are filled according to their yield. Try to see whether some areas have lower/higher yields.  
 * Analyze
-  + Set up the model with random incomplete block effects.
+  + Set up the model with random incomplete row and column effects.
   + Extract the variance components.
   + Compute an ANOVA 
   + Perform multiple (mean) comparisons using the LSD test/t-test.
@@ -250,3 +250,50 @@ Please [click here](https://github.com/SchmidtPaul/DSFAIR/tree/master/Rpurl){tar
 
  * the entire R-code of each example combined, including
  * solutions to the respective exercise(s).
+ 
+```{r, echo=FALSE, eval=FALSE}
+# Which genotypes have missing yield observations?
+ex1dat %>% 
+  group_by(treat) %>% 
+  summarize(n_missing = sum(is.na(yield))) %>% # count missing values
+  arrange(desc(n_missing)) # sort
+
+# Create a field trial layout using ´desplot()´ where the 
+# plots are filled according to their yield. 
+# Try to see whether some areas have lower/higher yields.
+desplot(data = ex1dat,
+        form = yield ~ col + row | rep,            # fill color per genotype, headers per replicate
+        text = treat, cex = 0.7, shorten = "no",   # show genotype names per plot
+        out1 = row, out1.gpar=list(col="black"), # lines between rows
+        out2 = col, out2.gpar=list(col="black"), # lines between columns
+        main = "Field layout", show.key = F)     # formatting
+
+# Set up the model with random incomplete block effects.
+ex1dat <- ex1dat %>% 
+  mutate(row_fct = as.factor(row),
+         col_fct = as.factor(col))
+
+mod.rb <- lmer(yield ~ treat + rep +
+                 (1|rep:row_fct) + 
+                 (1|rep:col_fct),
+               data = ex1dat)
+
+# Extract the variance components.
+mod.rb %>% 
+  VarCorr() %>% 
+  as.data.frame() %>% 
+  dplyr::select(grp, vcov)
+
+# Compute an ANOVA
+mod.rb %>% anova(ddf="Kenward-Roger")
+
+# Perform multiple (mean) comparisons using the LSD test/t-test.
+mod.rb %>%
+  emmeans(pairwise ~ "treat",
+          adjust = "none", # LSD test/t-test
+          lmer.df = "kenward-roger") %>%
+  pluck("emmeans") %>%
+  cld(details = TRUE, Letters = letters)
+```
+ 
+ 
