--- a/latsquare_Bridges1989.Rmd
+++ b/latsquare_Bridges1989.Rmd
@@ -17,9 +17,13 @@ pacman::p_load(kableExtra, formattable ,htmltools)
 ```{r}
 # packages
 pacman::p_load(agridat, tidyverse, # data import and handling
+               conflicted,         # handling function conflicts
                emmeans, multcomp,  # mean comparisons
-               ggplot2, desplot,   # plots
-               report)             # automated analysis summaries
+               ggplot2, desplot)   # plots
+
+# conflicts: identical function names from different packages
+conflict_prefer("filter", "dplyr")
+conflict_prefer("select", "dplyr")
 ```
 
 # Data
@@ -32,7 +36,7 @@ This example is taken from the `agridat`*: Agricultural Datasets* package. It co
 # data (from agridat package)
 dat <- agridat::bridges.cucumber %>% 
   filter(loc == "Clemson") %>% # subset data from only one location
-  dplyr::select(-loc) # remove loc column which is now unnecessary
+  select(-loc) # remove loc column which is now unnecessary
 
 dat
 ```
@@ -53,8 +57,8 @@ dat <- dat %>%
 In order to obtain a field layout of the trial, we can use the `desplot()` function. Notice that for this we need two data columns that identify the `row` and `col` of each plot in the trial. 
 
 ```{r, fig.height = 3, fig.width = 5, fig.align = "center"}
-desplot(data = dat,
-        form = gen ~ row + col, flip = TRUE,
+desplot(data = dat, flip = TRUE,
+        form = gen ~ row + col, 
         out1 = row, out1.gpar=list(col="black", lwd=3),
         out2 = col, out2.gpar=list(col="black", lwd=3),
         text = gen, cex = 1, shorten = "no",
@@ -171,22 +175,6 @@ ggplot() +
        Red dots and error bars represent adjusted mean with 95% confidence limits per genotype
        Means followed by a common letter are not significantly different according to the Tukey-test") +
   theme_classic() # clearer plot format 
-```
-
-## dataset
-
-```{r results='asis'}
-dat %>% 
-  dplyr::select(-row, -col) %>% 
-  report() %>% text_short()
-```
-
-## anova
-
-```{r results='asis'}
-mod %>% 
-  anova %>% 
-  report() %>% text_short()
 ```
 
 **R-Code and exercise solutions**
