--- a/RCBD_ClewerScarisbrick2001.Rmd
+++ b/RCBD_ClewerScarisbrick2001.Rmd
@@ -16,10 +16,9 @@ pacman::p_load(kableExtra, formattable ,htmltools)
 
 ```{r}
 # packages
-pacman::p_load(readr, tidyverse,     # data import and handling
-               emmeans, multcomp,    # mean comparisons
-               ggplot2, desplot,     # plots
-               report, equatiomatic) # automated analysis summaries
+pacman::p_load(tidyverse, # data import and handling
+               emmeans, multcomp, # mean comparisons
+               desplot)   # plots
 ```
 
 # Data
@@ -167,30 +166,6 @@ ggplot() +
   theme_classic() # clearer plot format 
 ```
 
-## dataset
-
-```{r results='asis'}
-dat %>% 
-  dplyr::select(-row, -col) %>% 
-  report() %>% text_short()
-```
-
-## model
-
-```{r results='asis'}
-mod %>% extract_eq()
-
-mod %>% report() %>% text_short()
-```
-
-## anova
-
-```{r results='asis'}
-mod %>% 
-  anova %>% 
-  report() %>% text_short()
-```
-
 # Exercises
 
 ## Exercise 1
@@ -251,7 +226,7 @@ mod %>% anova() # treatment is significant!
 
 # Perform multiple (mean) comparisons
 mean_comparisons <- mod %>% 
-  emmeans(pairwise ~ "density", adjust="tukey") %>% # adjust="none" for t-test
+  emmeans(pairwise ~ "density", adjust = "tukey") %>% # adjust="none" for t-test
   pluck("emmeans") %>% 
   cld(details=TRUE, Letters=letters)
 ```
