--- a/Repeated_RCBD_PiephoEdmondson2018.Rmd
+++ b/Repeated_RCBD_PiephoEdmondson2018.Rmd
@@ -88,7 +88,7 @@ dat %>%
 
 We can also create a plot to get a better feeling for the data. Note that here we could even decide to extend the ggplot to become an animated gif as follows:
 
-```{r, echo=FALSE, purl=FALSE}
+```{r, class.source = "fold-hide", purl = FALSE, message = FALSE, warning = FALSE}
 var_colors <- c("#8cb369", "#f4a259", "#5b8e7d", "#bc4b51")
 names(var_colors) <- dat$variety %>% levels()
 
@@ -118,7 +118,7 @@ animate(gganimate_plot, renderer = gifski_renderer()) # render gif
 
 Our goal is therefore to build a suitable model taking serial correlation into account. In order to do this, we will initially consider the model for a single time point. Then, we extend this model to account for multiple weeks by allowing for week-speficic effects. Finally, we further allow for serially correlated error terms. 
 
-## Sinlge week
+## Single week
 
 When looking at data from a single time point (*e.g.* the first week), we merely have 20 observations from a randomized complete block design with a single treatment factor. It can therefore be analyzed with a simple one-way ANOVA (fixed `variety` effect) for randomized complete block designs (fixed `block` effect):
 
@@ -272,7 +272,7 @@ We can see that the we get $\sigma^2_{plot} =$ `0.022` and a $\rho =$ `0.749`.
 
 </br></br></br>
 
-```{r, eval=FALSE, echo=FALSE}
+```{r, eval=FALSE, class.source = "fold-hide"}
 mod.AR1nugget <- glmmTMB(formula = y ~ weekF * (variety + block) +
                            ar1(weekF + 0 | plot), # ar1 structure as random term to mimic error var
                          # dispformula = ~ 0, # error variance allowed = nugget!
